:bug:Fix a bug: too big fonts at festival date

--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ height : auto ;
  	overflow:scroll;}
 
 	.schedule {
-    font-size: 200%;
+    font-size: 100%;
 }
 
 .saturday {
